--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         id="com.imagitas.plugins.ADBMobile"
         version="1.0.0">
     <name>ADBMobile</name>
